--- a/about/about.html
+++ b/about/about.html
@@ -36,9 +36,14 @@
                     <li class="hidden">
                         <a href="#home"></a>
                     </li>
-                    <li>
-                        <a  href="#portfolio">Portfolio</a>
+                    <li class="dropdown">
+                        <a  class="dropdown-toggle" data-toggle="dropdown" href="#">Portfolio</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="../blog/blog.html">Pic of the Day</a></li>
+                            <li><a href="http://www.istockphoto.com/portfolio/01smith">Stock Photos</a></li>
+                        </ul>
                     </li>
+
                      <li>
                         <a href="#">About</a>
                     </li>
