--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
                         <li class="hidden">
                             <a href="#"></a>
                         </li>
-                        <li>
-                            <a  href="#portfolio">Portfolio</a>
-                        </li>
+                    <li class="dropdown">
+                        <a  class="dropdown-toggle" data-toggle="dropdown" href="#">Portfolio</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="blog/blog.html">Pic of the Day</a></li>
+                            <li><a href="http://www.istockphoto.com/portfolio/01smith">Stock Photos</a></li>
+                        </ul>
+                    </li>
                          <li>
                             <a href="about/about.html">About</a>
                         </li>
@@ -58,11 +62,13 @@
                 
             </div>
         </header>
-
+<!-- ===============================
+        Scripts
+     =============================== -->
         <script src="js/vendor/jquery-1.12.1.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/home.js"></script>
         <script type="text/javascript">
         // create a new viewer object:
         var viewer=new PANOViewer();
