--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="blog/blog.html">Pic of the Day</a></li>
                             <li><a href="http://www.istockphoto.com/portfolio/01smith">Stock Photos</a></li>
+                            <li><a href="courthouse/Texas-Courthouse-Tours.html">Texas Courthouse Tours</a></li>
                         </ul>
                     </li>
                          <li>
